--- a/theme/base.html
+++ b/theme/base.html
@@ -66,7 +66,7 @@
     <nav data-toggle="wy-nav-shift" class="wy-nav-side stickynav">
       <div class="wy-side-nav-search">
 	{%- block site_name %}
-		<a href="{{ nav.homepage.url }}" class='img-home'><span class='title'>Developer Documentation</span></a>
+		<a href="{{ nav.homepage.url }}" class='img-home'><span class='title'>Morphux Developer Documentation</span></a>
 	{%- endblock %}
 	{%- block search_button %}
         {% include "searchbox.html" %}
